Fixed minor layout issues

--- a/src/styles/sigmet.scss
+++ b/src/styles/sigmet.scss
@@ -200,7 +200,7 @@
             margin-top: 0.8rem;
           }
           > span:first-of-type {
-            margin-left: 1.4rem;
+            margin-left: 0.75rem;
           }
           > span .label.input-group {
             margin: 0;
